# graph_id_supp_info

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cristobalite.yml  ml.yml  test.yml
code/: cristobalite.py  ml.py
code/graph_id/analysis/: graphs.py
code/graph_id/core/: graph_id.py
data/: .gitignore
